updated with categorical classification

--- a/xai_intrusion_detection_shap.ipynb
+++ b/xai_intrusion_detection_shap.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOm2L5/tpxVrdpfzuTnlQnP",
+      "authorship_tag": "ABX9TyNC/vGM/PFr0KY+u8ZuVldJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "ckt0BLSdaFAH"
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -102,12 +102,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 73
         },
         "id": "05o6PkigaV0b",
-        "outputId": "ad28770a-5669-46d7-92b8-006cc4a10701"
+        "outputId": "c406c382-18a6-4aa2-f3c8-d7948e98dbcd"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -117,9 +117,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-294eda23-4e7b-4d43-a847-771fc53b717b\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-14e08444-ad4a-4682-b598-d875cdc480c8\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-294eda23-4e7b-4d43-a847-771fc53b717b\">\n",
+              "     <output id=\"result-14e08444-ad4a-4682-b598-d875cdc480c8\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -307,7 +307,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving NSL-KDD  Dataset.zip to NSL-KDD  Dataset (1).zip\n"
+            "Saving NSL-KDD  Dataset.zip to NSL-KDD  Dataset.zip\n"
           ]
         }
       ]
@@ -334,7 +334,7 @@
       "metadata": {
         "id": "tgmgHVdZcGMR"
       },
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -354,7 +354,7 @@
       "metadata": {
         "id": "-hH_jcfTaRDv"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -376,9 +376,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lFT7rRQubNDD",
-        "outputId": "0f47f15a-4e1c-45c1-e110-67c4ab605491"
+        "outputId": "ab7ed275-71c5-4269-9c22-75b95cbe2b8a"
       },
-      "execution_count": 19,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,6 +473,52 @@
             "1                     mscan     11  \n",
             "\n",
             "[5 rows x 42 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Column that are categorical and not binary yet:\n",
+        "#Explore categorical Features\n",
+        "print('Training set:')\n",
+        "for col_name in dataset_train.columns:\n",
+        "  if dataset_train[col_name].dtypes == 'object':\n",
+        "    unique_cat = len(dataset_train[col_name].unique())\n",
+        "    print(\"Feature '{col_name}' has {unique_cat} categories\".format(col_name=col_name, unique_cat=unique_cat))\n",
+        "#see how distributed the feature service is, it is evenly distributed and therefore we need to make dummies for all.\n",
+        "print()\n",
+        "print('Distribution of categories in service:')\n",
+        "print(dataset_train['service'].value_counts().sort_values(ascending=False).head())\n"
+      ],
+      "metadata": {
+        "id": "L_B5t07PTYmI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ad10567-3c49-4c1d-f546-35dff3ed3325"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training set:\n",
+            "Feature 'duration' has 3 categories\n",
+            "Feature 'protocol_type' has 70 categories\n",
+            "Feature 'service' has 11 categories\n",
+            "Feature 'dst_host_srv_rerror_rate' has 23 categories\n",
+            "\n",
+            "Distribution of categories in service:\n",
+            "service\n",
+            "SF      74945\n",
+            "S0      34851\n",
+            "REJ     11233\n",
+            "RSTR     2421\n",
+            "RSTO     1562\n",
+            "Name: count, dtype: int64\n"
           ]
         }
       ]
