--- a/xai_intrusion_detection_shap.ipynb
+++ b/xai_intrusion_detection_shap.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC/vGM/PFr0KY+u8ZuVldJ",
+      "authorship_tag": "ABX9TyPd7/jOTiAbbAlEErhe/N5p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,10 +102,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 90
         },
         "id": "05o6PkigaV0b",
-        "outputId": "c406c382-18a6-4aa2-f3c8-d7948e98dbcd"
+        "outputId": "545f19c0-1318-4c67-f849-a335271cad74"
       },
       "execution_count": 2,
       "outputs": [
@@ -117,9 +117,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-14e08444-ad4a-4682-b598-d875cdc480c8\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-9c97b895-274d-4f2f-9828-be30104b57b4\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-14e08444-ad4a-4682-b598-d875cdc480c8\">\n",
+              "     <output id=\"result-9c97b895-274d-4f2f-9828-be30104b57b4\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -361,24 +361,24 @@
       "cell_type": "code",
       "source": [
         "# Assigning attribute name to dataset\n",
-        "dataset_train = pd.read_csv(\"KDDTrain+.txt\", header=None, names=col_names)\n",
-        "dataset_test = pd.read_csv(\"KDDTest+.txt\", header=None, names=col_names)\n",
+        "df_train = pd.read_csv(\"KDDTrain+.txt\", header=None, names=col_names)\n",
+        "df_test = pd.read_csv(\"KDDTest+.txt\", header=None, names=col_names)\n",
         "\n",
         "# Step 5: Display a few rows to confirm\n",
         "print(\"Train Dataset:\")\n",
-        "print(dataset_train.head())\n",
+        "print(df_train.head())\n",
         "\n",
         "print(\"\\nTest Dataset:\")\n",
-        "print(dataset_test.head())"
+        "print(df_test.head())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lFT7rRQubNDD",
-        "outputId": "ab7ed275-71c5-4269-9c22-75b95cbe2b8a"
+        "outputId": "64149c80-4a22-49c7-9e42-76b6211275d9"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,50 +478,325 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#Column that are categorical and not binary yet:\n",
-        "#Explore categorical Features\n",
-        "print('Training set:')\n",
-        "for col_name in dataset_train.columns:\n",
-        "  if dataset_train[col_name].dtypes == 'object':\n",
-        "    unique_cat = len(dataset_train[col_name].unique())\n",
-        "    print(\"Feature '{col_name}' has {unique_cat} categories\".format(col_name=col_name, unique_cat=unique_cat))\n",
-        "#see how distributed the feature service is, it is evenly distributed and therefore we need to make dummies for all.\n",
-        "print()\n",
-        "print('Distribution of categories in service:')\n",
-        "print(dataset_train['service'].value_counts().sort_values(ascending=False).head())\n"
+        "# 2. DATA EXPLORATION AND PREPROCESSING\n"
       ],
       "metadata": {
-        "id": "L_B5t07PTYmI",
+        "id": "qoqGTd9iPKFV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n[2] DATA EXPLORATION AND PREPROCESSING\")"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8ad10567-3c49-4c1d-f546-35dff3ed3325"
+        "id": "4K8kiN7IPNZy",
+        "outputId": "8e7335cf-2667-49e6-bc7b-02ee6a929e8e"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training set:\n",
-            "Feature 'duration' has 3 categories\n",
-            "Feature 'protocol_type' has 70 categories\n",
-            "Feature 'service' has 11 categories\n",
-            "Feature 'dst_host_srv_rerror_rate' has 23 categories\n",
             "\n",
-            "Distribution of categories in service:\n",
-            "service\n",
-            "SF      74945\n",
-            "S0      34851\n",
-            "REJ     11233\n",
-            "RSTR     2421\n",
-            "RSTO     1562\n",
+            "[2] DATA EXPLORATION AND PREPROCESSING\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n Sample data from training set:\")\n",
+        "print(df_train.head())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PGtE_69MQXjP",
+        "outputId": "bca3c3a2-255c-468e-cdff-be35a1b98f0f"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " Sample data from training set:\n",
+            "  duration protocol_type service  flag  src_bytes  dst_bytes  land  \\\n",
+            "0      tcp      ftp_data      SF   491          0          0     0   \n",
+            "0      udp         other      SF   146          0          0     0   \n",
+            "0      tcp       private      S0     0          0          0     0   \n",
+            "0      tcp          http      SF   232       8153          0     0   \n",
+            "0      tcp          http      SF   199        420          0     0   \n",
+            "\n",
+            "   wrong_fragment  urgent  hot  ...  dst_host_srv_count  \\\n",
+            "0               0       0    0  ...                0.17   \n",
+            "0               0       0    0  ...                0.00   \n",
+            "0               0       0    0  ...                0.10   \n",
+            "0               0       0    0  ...                1.00   \n",
+            "0               0       0    0  ...                1.00   \n",
+            "\n",
+            "   dst_host_same_srv_rate  dst_host_diff_srv_rate  \\\n",
+            "0                    0.03                    0.17   \n",
+            "0                    0.60                    0.88   \n",
+            "0                    0.05                    0.00   \n",
+            "0                    0.00                    0.03   \n",
+            "0                    0.00                    0.00   \n",
+            "\n",
+            "   dst_host_same_src_port_rate  dst_host_srv_diff_host_rate  \\\n",
+            "0                         0.00                         0.00   \n",
+            "0                         0.00                         0.00   \n",
+            "0                         0.00                         1.00   \n",
+            "0                         0.04                         0.03   \n",
+            "0                         0.00                         0.00   \n",
+            "\n",
+            "   dst_host_serror_rate  dst_host_srv_serror_rate  dst_host_rerror_rate  \\\n",
+            "0                  0.00                      0.05                  0.00   \n",
+            "0                  0.00                      0.00                  0.00   \n",
+            "0                  1.00                      0.00                  0.00   \n",
+            "0                  0.01                      0.00                  0.01   \n",
+            "0                  0.00                      0.00                  0.00   \n",
+            "\n",
+            "   dst_host_srv_rerror_rate  label  \n",
+            "0                    normal     20  \n",
+            "0                    normal     15  \n",
+            "0                   neptune     19  \n",
+            "0                    normal     21  \n",
+            "0                    normal     21  \n",
+            "\n",
+            "[5 rows x 42 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Basic information about the dataset"
+      ],
+      "metadata": {
+        "id": "O4QOCQVkQv5_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n sample data from missing values:\")\n",
+        "print(df_train.info())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UnhnBv8QQ1FG",
+        "outputId": "d4793671-e8d9-42ea-bc68-c3d91fb257ed"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " sample data from missing values:\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 125973 entries, 0 to 0\n",
+            "Data columns (total 42 columns):\n",
+            " #   Column                       Non-Null Count   Dtype  \n",
+            "---  ------                       --------------   -----  \n",
+            " 0   duration                     125973 non-null  object \n",
+            " 1   protocol_type                125973 non-null  object \n",
+            " 2   service                      125973 non-null  object \n",
+            " 3   flag                         125973 non-null  int64  \n",
+            " 4   src_bytes                    125973 non-null  int64  \n",
+            " 5   dst_bytes                    125973 non-null  int64  \n",
+            " 6   land                         125973 non-null  int64  \n",
+            " 7   wrong_fragment               125973 non-null  int64  \n",
+            " 8   urgent                       125973 non-null  int64  \n",
+            " 9   hot                          125973 non-null  int64  \n",
+            " 10  num_failed_logins            125973 non-null  int64  \n",
+            " 11  logged_in                    125973 non-null  int64  \n",
+            " 12  num_compromised              125973 non-null  int64  \n",
+            " 13  root_shell                   125973 non-null  int64  \n",
+            " 14  su_attempted                 125973 non-null  int64  \n",
+            " 15  num_root                     125973 non-null  int64  \n",
+            " 16  num_file_creations           125973 non-null  int64  \n",
+            " 17  num_shells                   125973 non-null  int64  \n",
+            " 18  num_access_files             125973 non-null  int64  \n",
+            " 19  num_outbound_cmds            125973 non-null  int64  \n",
+            " 20  is_host_login                125973 non-null  int64  \n",
+            " 21  is_guest_login               125973 non-null  int64  \n",
+            " 22  count                        125973 non-null  int64  \n",
+            " 23  srv_count                    125973 non-null  float64\n",
+            " 24  serror_rate                  125973 non-null  float64\n",
+            " 25  srv_serror_rate              125973 non-null  float64\n",
+            " 26  rerror_rate                  125973 non-null  float64\n",
+            " 27  srv_rerror_rate              125973 non-null  float64\n",
+            " 28  same_srv_rate                125973 non-null  float64\n",
+            " 29  diff_srv_rate                125973 non-null  float64\n",
+            " 30  srv_diff_host_rate           125973 non-null  int64  \n",
+            " 31  dst_host_count               125973 non-null  int64  \n",
+            " 32  dst_host_srv_count           125973 non-null  float64\n",
+            " 33  dst_host_same_srv_rate       125973 non-null  float64\n",
+            " 34  dst_host_diff_srv_rate       125973 non-null  float64\n",
+            " 35  dst_host_same_src_port_rate  125973 non-null  float64\n",
+            " 36  dst_host_srv_diff_host_rate  125973 non-null  float64\n",
+            " 37  dst_host_serror_rate         125973 non-null  float64\n",
+            " 38  dst_host_srv_serror_rate     125973 non-null  float64\n",
+            " 39  dst_host_rerror_rate         125973 non-null  float64\n",
+            " 40  dst_host_srv_rerror_rate     125973 non-null  object \n",
+            " 41  label                        125973 non-null  int64  \n",
+            "dtypes: float64(15), int64(23), object(4)\n",
+            "memory usage: 41.3+ MB\n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Attack type distribution"
+      ],
+      "metadata": {
+        "id": "7Kp8HwEjRUef"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n Attack distribution in training_data:\")\n",
+        "attack_counts = df_train['label'].value_counts()\n",
+        "print(attack_counts)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ba-9ZTCWRaMA",
+        "outputId": "bf1ea072-7fe2-424a-a528-0d6b9f7433aa"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " Attack distribution in training_data:\n",
+            "label\n",
+            "21    62557\n",
+            "18    20667\n",
+            "20    19339\n",
+            "19    10284\n",
+            "15     3990\n",
+            "17     3074\n",
+            "16     2393\n",
+            "12      729\n",
+            "14      674\n",
+            "11      641\n",
+            "13      451\n",
+            "10      253\n",
+            "9       194\n",
+            "7       118\n",
+            "8       106\n",
+            "6        96\n",
+            "5        81\n",
+            "4        79\n",
+            "0        66\n",
+            "3        65\n",
+            "1        62\n",
+            "2        54\n",
             "Name: count, dtype: int64\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Map detailed attack labels to attack categories\n",
+        "def categorize_attack(label):\n",
+        "  if label == 'normal':\n",
+        "    return 'normal'\n",
+        "  elif label in ['neptune', 'back', 'land', 'pod', 'smurf', 'teardrop', 'apache2', 'udpstorm', 'processtable', 'worm']:\n",
+        "      return 'DoS'\n",
+        "  elif label in ['satan', 'ipsweep', 'nmap', 'portsweep', 'mscan', 'saint']:\n",
+        "      return 'Probe'\n",
+        "  elif label in ['guess_passwd', 'ftp_write', 'imap', 'phf', 'multihop', 'warezmaster', 'warezclient', 'spy', 'xlock', 'xsnoop', 'snmpguess', 'snmpgetattack', 'httptunnel', 'sendmail', 'named']:\n",
+        "      return 'R2L'\n",
+        "  elif label in ['buffer_overflow', 'loadmodule', 'rootkit', 'perl', 'sqlattack', 'xterm', 'ps']:\n",
+        "      return 'U2R'\n",
+        "  else:\n",
+        "      return 'Unknown'"
+      ],
+      "metadata": {
+        "id": "GJdnXDeZTQKu"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Apply categorization\n",
+        "df_train['attack_cat'] = df_train['label'].apply(categorize_attack)\n",
+        "df_test['attack_cat'] = df_test['label'].apply(categorize_attack)"
+      ],
+      "metadata": {
+        "id": "x4xEY5YmUsg5"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display attack categories\n",
+        "print(\"\\n  Attack categories in training data:\")\n",
+        "print(df_train['attack_cat'].value_counts())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uIQBaeldVIm5",
+        "outputId": "8966a7cd-5b0a-44f1-e0ea-ca39fec39858"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "  Attack categories in training data:\n",
+            "attack_cat\n",
+            "Unknown    125973\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Visualization of attack categories"
+      ],
+      "metadata": {
+        "id": "3bh3GBCzWHO8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
